--- a/job-scrapper/templates/home.html
+++ b/job-scrapper/templates/home.html
@@ -10,6 +10,10 @@
   <!--
     HTML에 변수를 넣을 수 있다.
     user가 웹사이트를 보기전에 flask가 변수를 replace 할것이다
+
+    form의 기본 method는 get으로 설정되어있다.
+    그리고 get 은 사용자가 action으로 넣은 page로 이동하게 되면
+    user가 input에 넣은 value를 URL에 넣을것이다.
   -->
   <h1>Job Scrapper</h1>
   <h4>What job do you want?</h4>
