--- a/job-scrapper/templates/home.html
+++ b/job-scrapper/templates/home.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- pico css -->
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <title>Job Scrapper</title>
 </head>
 <body>
@@ -15,11 +17,13 @@
     그리고 get 은 사용자가 action으로 넣은 page로 이동하게 되면
     user가 input에 넣은 value를 URL에 넣을것이다.
   -->
-  <h1>Job Scrapper</h1>
-  <h4>What job do you want?</h4>
-  <form action="/search">
-    <input type="text" name="keyword" placeholder="write keyword please" />
-    <button>Search</button>
-  </form>
+  <main class="container">
+    <h1>Job Scrapper</h1>
+    <h4>What job do you want?</h4>
+    <form action="/search">
+      <input type="text" name="keyword" placeholder="write keyword please" />
+      <button>Search</button>
+    </form>
+  </main>
 </body>
 </html>
