--- a/job-scrapper/templates/search.html
+++ b/job-scrapper/templates/search.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- pico css -->
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">
   <title>Job Scrapper</title>
 </head>
 <body>
@@ -12,13 +14,28 @@
     {{}}는 안에 변수를 넣으면 flask가 변수값을 반환해준다
     {%%}는 실행시키고싶은 python코드를 넣는다
   -->
-  {% for job in jobs %}
-    <div>
-      <span>{{job.company}}</span>
-      <span>{{job.location}}</span>
-      <span>{{job.position}}</span>
-      <a href="javascript:void(0);" target="_blank">링크작업용</a>
-    </div>
-  {% endfor %}
+  <main class="container">
+    <h1>Search Results: "{{keyword}}"</h1>
+    <figure>
+      <table role='grid'>
+        <thead>
+          <tr>
+            <th>Company</th>
+            <th>Location</th>
+            <th>Position</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for job in jobs %}
+          <tr>
+            <td>{{job.company}}</td>
+            <td>{{job.location}}</td>
+            <td>{{job.position}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </figure>
+  </main>
 </body>
 </html>
